@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4382: dbm.dumb did not specify the expected file encoding for opened
+  files.
+
 - Issue #4383: When IDLE cannot make the connection to its subprocess, it would
   fail to properly display the error message.
 
